--- a/projectCA.html
+++ b/projectCA.html
@@ -32,19 +32,14 @@
               fast, and quick to update. custom React components & minimalist
               design.
             </p>
-            <ul class="contact-icons">
-              <li class="icon solid fas fa-external-link-alt">
-                <a
-                  href="https://hopeful-benz-0d6c35.netlify.app/"
-                  target="_blank"
-                  style="
-                    font-weight: 200;
-                    font-family: Arial, Helvetica, sans-serif;
-                  "
-                  >Live</a
-                >
-              </li>
-            </ul>
+            <div class="go-to-live__Link">
+              <a
+                href="https://hopeful-benz-0d6c35.netlify.app/"
+                target="_blank"
+                style="font-weight: 700; font-family: Helvetica, sans-serif"
+                >Live <i class="fas fa-external-link-alt"> </i
+              ></a>
+            </div>
           </div>
 
           <div class="gallery">
