--- a/index.html
+++ b/index.html
@@ -181,6 +181,14 @@
           </div>
           <div class="gallery">
             <a
+            href="/projectSpendify.html"
+
+              class="image filtered  span-2-5"
+              data-position="center"
+              style="border:1px solid var(--color-primary)"
+              ><img src="images/gallery/fulls/spendify1.png" alt=""
+            /></a>
+            <a
             href="/projectEQ.html"
 
               class="image filtered  span-2-5"
@@ -194,16 +202,17 @@
               class="image filtered  span-2-5"
               data-position="left"
               style="border:1px solid var(--color-primary)"
-              ><img src="images/gallery/fulls/ca2.png" alt=""
+              ><img src="images/gallery/fulls/ca3.png" alt=""
             /></a>
-            <a
+            <!-- ######### Electrics STORE HEB ######### -->
+            <!-- <a
             href="/projectES.html"
 
               class="image filtered  span-2-5"
               data-position="top"
               style="border:1px solid var(--color-primary)"
               ><img src="images/gallery/fulls/elec1.png" alt=""
-            /></a>
+            /></a> -->
             <a
             href="/projectNA.html"
 
