--- a/projectEQ.html
+++ b/projectEQ.html
@@ -32,19 +32,15 @@
               components, lightwheight PWA, different features such as cart,
               product slider and a modern resposnsive design.
             </p>
-            <ul class="contact-icons">
-              <li class="icon solid fas fa-external-link-alt">
-                <a
-                  href="https://priceless-jennings-93086e.netlify.app/"
-                  target="_blank"
-                  style="
-                    font-weight: 200;
-                    font-family: Arial, Helvetica, sans-serif;
-                  "
-                  >Live</a
-                >
-              </li>
-            </ul>
+
+            <div class="go-to-live__Link">
+              <a
+                href="https://priceless-jennings-93086e.netlify.app/"
+                target="_blank"
+                style="font-weight: 700; font-family: Helvetica, sans-serif"
+                >Live <i class="fas fa-external-link-alt"> </i
+              ></a>
+            </div>
           </div>
           <div class="gallery">
             <a
