--- a/projectFW.html
+++ b/projectFW.html
@@ -34,19 +34,14 @@
               based on the original company website which was designed with
               wordpress.
             </p>
-            <ul class="contact-icons">
-              <li class="icon solid fas fa-external-link-alt">
-                <a
-                  href="https://keen-nightingale-4d0442.netlify.app/"
-                  target="_blank"
-                  style="
-                    font-weight: 200;
-                    font-family: Arial, Helvetica, sans-serif;
-                  "
-                  >Live</a
-                >
-              </li>
-            </ul>
+            <div class="go-to-live__Link">
+              <a
+                href="https://keen-nightingale-4d0442.netlify.app/"
+                target="_blank"
+                style="font-weight: 700; font-family: Helvetica, sans-serif"
+                >Live <i class="fas fa-external-link-alt"> </i
+              ></a>
+            </div>
           </div>
           <div class="gallery">
             <a
