--- a/projectEQ.html
+++ b/projectEQ.html
@@ -26,6 +26,11 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Shopiq</span>
+            </div>
             <h2 class="major">Shopiq</h2>
             <p>
               E-commerce react application, converted to react arrow functional
@@ -33,7 +38,7 @@
               product slider and a modern resposnsive design.
             </p>
 
-            <div class="go-to-live__Link">
+            <div id="go-to-live__Link">
               <a
                 href="https://priceless-jennings-93086e.netlify.app/"
                 target="_blank"
