--- a/projectFW.html
+++ b/projectFW.html
@@ -26,6 +26,11 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Fastway</span>
+            </div>
             <h2 class="major">FastWay</h2>
             <p>
               delivery company website, single-page-application, using react
@@ -34,7 +39,7 @@
               based on the original company website which was designed with
               wordpress.
             </p>
-            <div class="go-to-live__Link">
+            <div id="go-to-live__Link">
               <a
                 href="https://keen-nightingale-4d0442.netlify.app/"
                 target="_blank"
