--- a/projectNA.html
+++ b/projectNA.html
@@ -27,6 +27,11 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Nadlan</span>
+            </div>
             <h2 class="major">Nadlan</h2>
             <p>
               real estate agency web application, developed for client-side use
@@ -49,7 +54,7 @@
         
               
             </p>
-            <div class="go-to-live__Link">
+            <div id="go-to-live__Link">
               <a
               href="https://distracted-easley-4a639d.netlify.app/"
 
