--- a/projectSG.html
+++ b/projectSG.html
@@ -26,13 +26,18 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>S.A.D Group</span>
+            </div>
             <h2 class="major">S.A.D Group LTD</h2>
             <p>
               construction contractor company, designed using React front-end
               and built a python custom API responsible for saving user requests
               and sending emails notifying the company.
             </p>
-            <div class="go-to-live__Link">
+            <div id="go-to-live__Link">
               <a
                 href="https://sadgroup.co.il/"
                 target="_blank"
