--- a/projectCA.html
+++ b/projectCA.html
@@ -26,13 +26,18 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Creative Agency</span>
+            </div>
             <h2 class="major">Creative Agency</h2>
             <p>
               Basic SPA(single page application), customizable, maintainable,
               fast, and quick to update. custom React components & minimalist
               design.
             </p>
-            <div class="go-to-live__Link">
+            <div id="go-to-live__Link">
               <a
                 href="https://hopeful-benz-0d6c35.netlify.app/"
                 target="_blank"
