--- a/projectES.html
+++ b/projectES.html
@@ -22,6 +22,11 @@
         <!-- Panel -->
         <section class="panel" id="projects">
           <div class="intro color2">
+            <div id="project-page-navigation">
+              <a href="/">Home</a><i class="fas fa-chevron-right"></i
+              ><a href="/projectsPage.html">Projects</a
+              ><i class="fas fa-chevron-right"></i><span>Electrics</span>
+            </div>
             <h2 class="major">Electrics</h2>
             <p>
               eCommerce web application, client-side features include shopping
@@ -46,20 +51,15 @@
                 * user login
                 details: user@example.com  </br>1234
               </p>
-              <ul class="contact-icons">
-               
-                <li class="icon solid fas fa-external-link-alt">
-                  <a
-                    href="https://stupefied-mcnulty-a80dec.netlify.app/"
-                    target="_blank"
-                    style="
-                      font-weight: 200;
-                      font-family: Arial, Helvetica, sans-serif;
-                    "
-                    >Live</a
-                  >
-                </li>
-              </ul>
+              <div id="go-to-live__Link">
+                <a
+                  href="https://stupefied-mcnulty-a80dec.netlify.app/"
+                  target="_blank"
+                  style="font-weight: 700; font-family: Helvetica, sans-serif"
+                  >Live <i class="fas fa-external-link-alt"> </i
+                ></a>
+              </div>
+         
             </div>
 
           <div class="gallery">
