--- a/projectsPage.html
+++ b/projectsPage.html
@@ -28,46 +28,114 @@
           <div class="gallery">
             <a
               href="/projectCA.html"
-              class="image filtered span-2-5"
+              class="image span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/ca1.png" alt=""
-            /></a>
-            <a
+              ><img
+                class="project-card-img"
+                src="images/gallery/fulls/ca1.png"
+                alt=""
+              />
+              <div class="project-card-text">
+                <h3>Creative Agency</h3>
+                <p>
+                  Basic SPA(single page application), customizable,
+                  maintainable, fast, and quick to update. custom React
+                  components & minimalist design.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            >
+            <!-- <a
               href="/projectES.html"
               class="image filtered span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/elec1.png" alt=""
-            /></a>
+              ><img src="images/gallery/fulls/elec1.png" alt="" />
+              <div class="project-card-text">
+                <h3>Creative Agency</h3>
+                <p>
+                  Basic SPA(single page application), customizable,
+                  maintainable, fast, and quick to update. custom React
+                  components & minimalist design.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            > -->
             <a
               href="/projectFW.html"
-              class="image filtered span-2-5"
+              class="image span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/fastway2.png" alt=""
-            /></a>
+              ><img src="images/gallery/fulls/fastway2.png" alt="" />
+              <div class="project-card-text">
+                <h3>Fastway</h3>
+                <p>
+                  delivery company website, single-page-application, using react
+                  router for rendering different screens. project include form
+                  sections, different design features, custom animated
+                  components, based on the original company wordpress design.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            >
             <a
               href="/projectSG.html"
-              class="image filtered span-2-5"
+              class="image span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/sadgroup1.png" alt=""
-            /></a>
+              ><img src="images/gallery/fulls/sadgroup1.png" alt="" />
+              <div class="project-card-text">
+                <h3>S.A.D Group LTD</h3>
+                <p>
+                  construction contractor company, designed using React
+                  front-end and built a python custom API responsible for saving
+                  user requests and sending emails notifying the company.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            >
             <a
               href="/projectEQ.html"
-              class="image filtered span-2-5"
+              class="image span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/shopiq1.png" alt=""
-            /></a>
+              ><img src="images/gallery/fulls/shopiq1.png" alt="" />
+              <div class="project-card-text">
+                <h3>Shopiq</h3>
+                <p>
+                  E-commerce react application, converted to react arrow
+                  functional components, lightwheight PWA, different features
+                  such as cart, product slider and a modern resposnsive design.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            >
             <a
               href="/projectSpendify.html"
-              class="image filtered span-2-5"
+              class="image span-2-5"
               data-position="center"
               style="border: solid 1px var(--color-primary)"
-              ><img src="images/gallery/fulls/spendify1.png" alt=""
-            /></a>
+              ><img src="images/gallery/fulls/spendify1.png" alt="" />
+              <div class="project-card-text">
+                <h3>Spendify</h3>
+                <p>
+                  eCommerce web application, client-side features include
+                  shopping cart with automatic save in local storage, client
+                  sign up, profile page, and order history page. the admin
+                  dashboard allows for product management as well as client
+                  order and profile management. the admin order list will update
+                  as soon as an order has been submitted.
+                </p>
+                <span>...</span>
+                <button>READ MORE</button>
+              </div></a
+            >
           </div>
         </section>
 
