--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
       <div id="wrapper">
         <!-- Panel (Banner) -->
         <section class="panel banner right">
-          <div class="content color0 span-3-75">
+          <div class="content color0 span-3-75" > 
             <h1 class="major">
               <span style="color: var(--color-primary)">Vector</br></span>
               Software Development</span>
             </h1>
-            <p>            
+            <p id="intro-anchor">            
               To deliver products of the
               <span style="color: var(--color-primary)">highest quality</span>,
               we follow
@@ -62,8 +62,26 @@
               </li>
             </ul>
           </div>
-          <div class="image filtered span-1-75" data-position="25% 25%">
-            <img src="images/pic01.jpg" alt="" />
+          <div class="span-2-75"   id="hero-section-video-wrapper">
+            <!-- <img src="images/pic01.jpg" alt="" /> -->
+            <video
+            autoPlay
+            muted
+            loop
+            alt="hero-img"
+            id="hero-section-video"
+            poster="images/pic01.jpg"
+            playsInline
+          > 
+            <source type="video/mp4" src="images/vector_intro.mp4" />
+           
+          </video> 
+          <!-- <a
+          href="#intro-anchor"
+          class="button primary color1 circle icon solid fa-angle-down"
+          style="display:block;z-index:1000;margin: auto;margin-bottom: 5vh;"
+          >Next</a
+        > -->
           </div>
         </section>
 
@@ -334,31 +352,12 @@
                   <li>
                     <input
                       type="submit"
-                      value="Send Message"
+                      value="Send"
                       class="button primary"
                     />
                   </li>
                 </ul>
               </form>
-            </div>
-            <div class="span-1-5">
-              <ul class="contact-icons color1">
-                <li class="icon brands fa-twitter">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-facebook-f">
-                  <a href="#">facebook.com/vectorSD</a>
-                </li>
-                <li class="icon brands fa-snapchat-ghost">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-instagram">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-medium-m">
-                  <a href="#">medium.com/vectorSD</a>
-                </li>
-              </ul>
             </div>
           </div>
         </section>
