--- a/projectEQ.html
+++ b/projectEQ.html
@@ -122,33 +122,10 @@
                 </div>
                 <ul class="actions">
                   <li>
-                    <input
-                      type="submit"
-                      value="Send Message"
-                      class="button primary"
-                    />
+                    <input type="submit" value="Send" class="button primary" />
                   </li>
                 </ul>
               </form>
-            </div>
-            <div class="span-1-5">
-              <ul class="contact-icons color1">
-                <li class="icon brands fa-twitter">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-facebook-f">
-                  <a href="#">facebook.com/vectorSD</a>
-                </li>
-                <li class="icon brands fa-snapchat-ghost">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-instagram">
-                  <a href="#">@vectorSD-tld</a>
-                </li>
-                <li class="icon brands fa-medium-m">
-                  <a href="#">medium.com/vectorSD</a>
-                </li>
-              </ul>
             </div>
           </div>
         </section>
